--- a/Lab1/lab3.css
+++ b/Lab1/lab3.css
@@ -1,66 +1,1 @@
-input[type=button] {
-   border-top: 1px solid #aff797;
-   background: #65d683;
-   background: -webkit-gradient(linear, left top, left bottom, from(#3e9c54), to(#65d683));
-   background: -webkit-linear-gradient(top, #3e9c54, #65d683);
-   background: -moz-linear-gradient(top, #3e9c54, #65d683);
-   background: -ms-linear-gradient(top, #3e9c54, #65d683);
-   background: -o-linear-gradient(top, #3e9c54, #65d683);
-   padding: 11px 22px;
-   -webkit-border-radius: 16px;
-   -moz-border-radius: 16px;
-   border-radius: 16px;
-   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   color: white;
-   font-size: 12px;
-   font-family: Helvetica, Arial, Sans-Serif;
-   text-decoration: none;
-   vertical-align: middle;
-   }
-input[type=button]:hover {
-   border-top-color: #785a28;
-   background: #785a28;
-   color: #ccc;
-   }
-input[type=button]:active {
-   border-top-color: #1b5c27;
-   background: #1b5c27;
-   }
-
-   body{
-      background-color:Wheat;
-
-   }
-   header{
-      width: 60%;
-      position: sticky;
-      background-color: #eaba62;
-      top: 0;
-      -webkit-border-radius: 40px;
-      padding-left: 40%;
-   }
-   table,th,td{
-      width: 50%;
-      
-      border: 3px solid black;
-      position: sticky;
-      top: 40px;
-   }
-   tr:hover {
-      background-color: #f5f5f5;
-   }
-   ul {
-    list-style-type: square;
-   }
-   #referencias{
-      padding: 50px;
-      background-color: #F2CEB3;
-      -webkit-border-radius: 40px;
-   }
-   .preg{
-      background-color: BurlyWood;
-   }
-
+#nav,.preg{background-color:#deb887}#nav,table,td,th{position:sticky;top:40px}input[type=button]{border-top:1px solid #aff797;background:#65d683;background:-webkit-gradient(linear,left top,left bottom,from(#3e9c54),to(#65d683));background:-webkit-linear-gradient(top,#3e9c54,#65d683);background:-moz-linear-gradient(top,#3e9c54,#65d683);background:-ms-linear-gradient(top,#3e9c54,#65d683);background:-o-linear-gradient(top,#3e9c54,#65d683);padding:11px 22px;-webkit-border-radius:16px;-moz-border-radius:16px;border-radius:16px;-webkit-box-shadow:rgba(0,0,0,1) 0 1px 0;-moz-box-shadow:rgba(0,0,0,1) 0 1px 0;box-shadow:rgba(0,0,0,1) 0 1px 0;text-shadow:rgba(0,0,0,.4) 0 1px 0;color:#fff;font-size:12px;font-family:Helvetica,Arial,Sans-Serif;text-decoration:none;vertical-align:middle}input[type=button]:hover{border-top-color:#785a28;background:#785a28;color:#ccc}input[type=button]:active{border-top-color:#1b5c27;background:#1b5c27}body{background-color:Wheat}header{width:60%;position:sticky;background-color:#eaba62;top:0;-webkit-border-radius:40px;padding-left:40%}table,td,th{width:50%;border:3px solid #000}tr:hover{background-color:#f5f5f5}ul{list-style-type:square}#referencias{padding:50px;background-color:#F2CEB3;-webkit-border-radius:40px}*{font-weight:400;font-family:"Times New Roman",Times,serif;font-style:italic;font-variant:small-caps}#yo{width:200px;margin-left:40%;border:10px solid #deb887;padding:5px}#inicio,#inicio:visited{color:#000}#nav{margin-right:8%;margin-left:75%;padding-left:2%;-webkit-border-radius:40px}
